--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@
 
 body {
   padding: 16px;
+  height: 100%;
 }
 
 @media (min-width: 768px) {
